--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no"/>
 
   <!-- SEO -->
-  <title>JISU LIVE</title>
+  <title>RAVi</title>
   <meta name="author" content="Jaeyoon Song"/>
-  <meta name="keyword" content="권지수, 생일, birthday event">
-  <meta name="description" content="서울대 완벽남 권지수의 생일을 추카포카합니다💕">
   <meta name="copyright" content="Jaeyoon Song"/>
 
   <!-- Favicon -->
@@ -21,45 +19,18 @@
   <meta name="msapplication-TileColor" content="#b91d47">
   <meta name="theme-color" content="#e4534c">
 
-  <!-- Facebook -->
-  <meta property="fb:app_id" content="123456789">
-  <meta property="og:url" content="https://jisu.jaeyoon.io">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="JISU LIVE">
-  <meta property="og:image" content="/favicon-32x32.png">
-  <meta property="og:description" content="서울대 완벽남 권지수의 생일을 추카포카합니다💕">
-  <meta property="og:site_name" content="JaeYoon Song">
-  <meta property="article:author" content="JaeYoon Song">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@site_account">
-  <meta name="twitter:creator" content="@individual_account">
-  <meta name="twitter:url" content="https://jisu.jaeyoon.io">
-
-  <!-- iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-title" content="The Jaeyoon World">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <!-- Stylesheets-->
-  <link href='https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
   <link type="text/css" rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
-  <div class="container border">
-    <div class="help">
-      새로고침할 필요 없습니다.
-    </div>
-    <div class="box">
-      <div id="wrapper" class="center-x">
-        <h2 id="description" class="thin"><strong>퀴즈</strong>시작까지</h2>
-        <div id="timer" class="clock"></div>
-      </div>
-    </div>
+  <div id="video">
+    
   </div>
-  <canvas id="canv" width="32" height="32">브라우저 업그레이드해주세요</canvas>
+  <div id="ravi">
+  	<div class="boxes">
+  	</div>
+  </div>
 
-  <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 </body>
