--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
     <div class="loadingSpinner">Loading...</div>
     <div id="connectStatus" class="hidden">
       <div class="notConnected">
-        App is not connected with Screencastify.
-        <button id="connectBtn">Connect it!</button>
+        <b>Not Connected with Screencastify: </b>
+        <button id="connectBtn">Download</button>
       </div>
       <div class="connected">
-        App is connected with Screencastify.
-        Use the Share button in Screencastify to share a file with this App,
-        or <button id="startBtn">Start recording from this site</button>
+        <b>Connected with Screencastify: </b>
+        <button id="startBtn">Start Recording</button>
       </div>
     </div>
     <div class="videoPlayer" hidden>
@@ -74,8 +73,8 @@
     </div>
 
     <br>
-    
-    <div id="timer">yet</div>
+
+    <span id="timer">yet</span>
     
     <!-- JavaScript and HTML must be in separate files for security. -->
     <script src="https://www.screencastify.com/libs-api/castify-api.js"></script>
