practice button added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       <div class="connected">
         <b>Connected with Screencastify: </b>
         <button id="startBtn">Start Recording</button>
+         Or 
+        <button id="practiceBtn">Practice</button>
       </div>
     </div>
     <div class="videoPlayer" hidden>
