--- a/index.html
+++ b/index.html
@@ -25,11 +25,21 @@
 <body>
 
   <div id="video">
+
+  <video controls width="100%">
+
+    <source src="video/hangout_ravi.mp4"
+            type="video/mp4">
+
+    Sorry, your browser doesn't support embedded videos.
+</video>
     
   </div>
   <div id="ravi">
   	<div class="boxes">
       <h2>Summary</h2>
+      <div class="signals"></div>
+      <br>
   	</div>
   </div>
 
