--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
   <div id="ravi">
   	<div class="boxes">
-      <h2>Summary</h2>
+      <h2>Summary <button id="playAll" style="float:right">Play Summary</button></h2>
       <div class="signals"></div>
       <br>
   	</div>
