--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
     Sorry, your browser doesn't support embedded videos.
 </video>
+<p class="controls" style="color:#fff; margin-left: 1rem">
+  <label>playbackRate: <input type="range" step="0.1" min="0.5" max="2" value="1" id="rateSlider"></label> <span id="rateOutput" aria-live="polite">1.0</span>
+</p>
     
   </div>
   <div id="ravi">
