--- a/index.html
+++ b/index.html
@@ -24,28 +24,30 @@
 </head>
 <body>
 
-  <div id="video">
+  <div id="video"  style="color:#fff; padding: 2rem">
 
-  <video controls width="100%">
 
-    <source src="video/hangout_ravi.mp4"
-            type="video/mp4">
+    안녕하세요!<br><br>
 
-    Sorry, your browser doesn't support embedded videos.
-</video>
-<p class="controls" style="color:#fff; margin-left: 1rem">
-  <label>playbackRate: <input type="range" step="0.1" min="0.5" max="2" value="1" id="rateSlider"></label> <span id="rateOutput" aria-live="polite">1.0</span>
-</p>
+    1. 이 자리에 비디오 챗이 녹화된 영상이 보일 것입니다.<br><br>
+    2. 오른쪽 사이드바의 'Play Summary' 버튼을 누르면, 중요 부분을 요약한 Summary 영상이 재생됩니다.<br><br>
+      &nbsp;  &nbsp; => Summary 영상을 정지하려면 다시 버튼을 눌러주세요.<br><br>
+    3. 오른쪽 사이드바의 박스 하나하나를 클릭하면, 해당 부분 영상이 재생됩니다.<br><br>
+    4. 영상 위의 재생 버튼을 누르면 전체 영상이 재생됩니다.<br><br>
+    5. 재생 속도는 영상이 정지된 상태에서만 조작 가능합니다.<br><br>
+
+    <a href="ravi.html"><b>테스트 시작</b></a>
+
+    <p class="controls" style=" position:fixed; bottom: 2rem;">
+      <label>재생 속도: <input type="range" step="0.1" min="0.5" max="2" value="1" id="rateSlider"></label> <span id="rateOutput" aria-live="polite">1.0</span>
+    </p>
     
   </div>
   <div id="ravi">
   	<div class="boxes">
-      <h2>Summary <button id="playAll" style="float:right">Play Summary</button></h2>
+      <h2>Summary <button id="playAll" style="float:right;">Play Summary</button></h2>
       <div class="signals"></div>
       <br>
   	</div>
   </div>
-
-  <script src="js/data.js"></script>
-  <script src="js/main.js"></script>
 </body>
