--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
   <div id="ravi">
   	<div class="boxes">
       <h2>Summary <button id="playAll" style="float:right;">Play Summary</button></h2>
-      <div class="signals"></div>
+      <div class="signals">이 곳은 전체 몇 개의 박스가 있는지에 대한 정보가 있을 것입니다.</div><br>
+      <div class="box b0 margin0">
+        <b>박스</b> 
+        <span class="speaker">(말한 사람)</span><br>
+        <span class="time">박스를 클릭하면 해당 구간이 재생됩니다.</span><br>
+        <div class="memo">이 곳는 해당 구간에 대한 내용 요약 또는 스크립트가 있는 곳입니다.</div></div>
       <br>
   	</div>
   </div>
